--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
             "tomazov\\GeoIP2Update\\": "src/"
         },
         "classmap": [
-            "vendor/tomazov/geoip2-update/src/Client.php",
-            "vendor/tomazov/geoip2-update/src/ComposerClient.php",
-            "vendor/tomazov/geoip2-update/src/ComposerConsole.php"
+            "src/Client.php",
+            "src/ComposerClient.php",
+            "src/ComposerConsole.php"
         ]
     }
 }
