--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "maxmind"
     ],
     "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=5.3",
         "ext-curl": "*",
